--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <activity android:name=".CalendarActivity"
             android:label="@string/app_name">
         </activity>
+        <activity android:name=".MainActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
